--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,15 @@
+
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Roboto Condensed', sans-serif;
+}
 /* Styles for the navigation bar */
 .nav-pills .nav-link {
     padding: 20px 15px; 
     color: white !important; 
     background-color: #8c0410 !important; 
-    transition: color 0.3s, background-color 0.3s; 
+    border: 1px solid black; 
+    transition: color 0.3s, background-color 0.3s, border-color 0.3s; 
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .nav-pills .nav-link:hover, .nav-pills .nav-link:focus {
@@ -13,6 +19,7 @@
 .nav-pills .nav-link.active {
     background-color: #5c0209 !important; 
 }
+
 
 /* Hero sytle */
 .hero {
@@ -33,4 +40,60 @@
     bottom: 0;
     background-color: rgb(21,20,51,0.5);
     z-index: -1;
+}
+
+/* Goal Div style */
+#goal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+    font-size: 25px;
+    padding: 250px;
+    background: linear-gradient(to bottom, #5c0209, #ffffff);
+  }
+  
+  #goal img {
+    display: block;
+    margin-bottom: 10px; 
+  }
+  
+  #caption {
+    font-size: 20px; 
+    margin-top: 0px; 
+  }
+  
+  
+
+/* Carousel style */
+.carousel-custom {
+    width: 1000px; 
+    height: 650px; 
+    margin: auto; 
+    overflow: hidden; 
+    position: relative;
+}
+
+.carousel-custom .carousel-item {
+    position: relative; 
+    width: 100%;
+    height: 100%; 
+}
+
+.carousel-custom .carousel-item img {
+    width: 100%; 
+    height: auto; 
+    object-fit: cover; 
+}
+
+.carousel-custom .carousel-caption {
+    position: absolute; 
+    bottom: 20px; 
+    left: 0;
+    right: 0;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+    text-align: center;
 }
