--- a/css/policies.css
+++ b/css/policies.css
@@ -1,3 +1,10 @@
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+p{
+    color: #555;
+}
 /* Styles for the navigation bar */
 .nav-pills .nav-link {
     padding: 20px 15px; 
