--- a/css/policies.css
+++ b/css/policies.css
@@ -21,3 +21,49 @@ p{
 .nav-pills .nav-link.active {
     background-color: #5c0209 !important; 
 }
+
+/* Hero sytle */
+.hero {
+    background-image: url('../images/Inspection.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    z-index: 2;
+}
+
+.hero::after {
+    content:"";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background-color: rgb(21,20,51,0.5);
+    z-index: -1;
+}
+
+#intro {
+    display: flex;
+    align-items: center;
+  }
+  
+  #intro h1 {
+    font-size: 35x; 
+    font-weight: bold;
+  }
+  
+  #intro p {
+    font-size: 25px; 
+  }
+
+  #textIntro {
+    padding-left: 20px;
+  }
+
+  .center-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
