--- a/css/unpage.css
+++ b/css/unpage.css
@@ -1,3 +1,11 @@
+h1, h2, h3, h4, h5, h6, p {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+p{
+    color: #555;
+}
+
 /* Styles for the navigation bar */
 .nav-pills .nav-link {
     padding: 20px 15px; 
@@ -14,3 +22,44 @@
 .nav-pills .nav-link.active {
     background-color: #5c0209 !important; 
 }
+
+
+/* Hero sytle */
+.hero {
+    background-image: url('../images/UnitedNations.jpg');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    position: relative;
+    z-index: 2;
+}
+
+.hero::after {
+    content:"";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background-color: rgb(21,20,51,0.5);
+    z-index: -1;
+}
+
+
+#intro {
+    display: flex;
+    align-items: center;
+  }
+  
+  #intro h1 {
+    font-size: 35x; 
+    font-weight: bold;
+  }
+  
+  #intro p {
+    font-size: 25px; 
+  }
+
+  #textIntro {
+    padding-left: 20px;
+  }
